# LanguageBoids

./: CMakeLists.txt  README.TXT  README.md  main.cpp
Google_tests/: AbsoluteDateTest.cpp  BoidTest.cpp  CMakeLists.txt  ConverterTest.cpp
python/: dominance_analyser.py
src/: Application.cpp  Application.h  Boid.cpp  Boid.h  BoidSpawners.cpp  BoidSpawners.h  CMakeLists.txt  Camera.cpp  Camera.h  CompBoid.cpp  CompSimulation.cpp  CompSimulator.cpp  CompStudySimulator.cpp  CompStudySimulator.h  Config.h  DominanceStudySimulator.cpp  DominanceStudySimulator.h  EvoBoid.cpp  EvoSimulation.cpp  EvoSimulator.cpp  Gregorian.cpp  Gregorian.h  Julian.cpp  KeyBoid.cpp  KeySimulator.cpp  LanguageManager.cpp  LanguageManager.h  MainMenu.cpp  MainMenu.h  Obstacles.cpp  Obstacles.h  RescourceManager.cpp  RescourceManager.h  ResourceManager.cpp  ResourceManager.h  Serialization.cpp  Serialization.h  Simulation.cpp  Simulation.h  SimulationConfig.h  (+17 more)
src/analysis/: CompAnalyser.cpp  CompAnalyser.h  EvoAnalyser.cpp  EvoAnalyser.h  KeyAnalyser.cpp  KeyAnalyser.h
src/editor/: Editor.cpp  Editor.h  EditorTool.cpp  EditorTool.h  Serialization.cpp  Serialization.h  SpawnZone.cpp  SpawnZone.h  ToolSelector.cpp  ToolSelector.h  Tools.cpp  Tools.h
src/ui/: BoidToolInterface.cpp  BoidToolInterface.h  BoidToolInterfaces.cpp  BoidToolInterfaces.h  Button.cpp  Button.h  ConfigInterface.cpp  ConfigInterface.h  EscapeInterface.cpp  EscapeInterface.h  EscapeStateInterface.cpp  EscapeStateInterface.h  InputField.cpp  InputField.h  Interface.cpp  Interface.h  InterfaceComponent.cpp  InterfaceComponent.h  InterfaceManager.cpp  InterfaceManager.h  Panel.cpp  Panel.h  SettingsInterface.cpp  SettingsInterface.h  StudyInterface.cpp  StudyInterface.h  TerrainToolInterface.cpp  TerrainToolInterface.h  TextField.cpp  TextField.h  ToolSelectorInterface.cpp  ToolSelectorInterface.h  UserInterface.cpp  UserInterface.h  WorldSizeInterface.cpp  WorldSizeInterface.h
src/ui/components/: Button.cpp  Button.h  InputField.cpp  InputField.h  InterfaceComponent.cpp  InterfaceComponent.h  Panel.cpp  Panel.h  TextField.cpp
